2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Fix test-consumer-by-info to terminate.

	* tests/test-consumer-by-info.c: Remove epc_test_run() loop.

2007-12-04  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac: Bump version number.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3 ===

	* NEWS: Updated for release 0.3
	* README: Update gnutls version.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Track client connections and disconnect clients in epc_publisher_quit
	to avoid leaking of HTTP servers.

	* libepc/publisher.c: Add functions for client tracking.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Mark the EpcAuthContext argument as constant for some functions.

	* libepc/publisher.c, libepc/publisher.h: Add some const keywords.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Avoid memory management problems by properly passing authentication
	settings to libsoup: The library forgets to use the const keyword, but
	considers the context it passes the authentication callback constant.

	* libepc/publisher.c: Properly initialize server_auth field.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Document the @details argument of epc_service_info_new and
	epc_service_info_new_full.

	* libepc/service-info.c: Update docs.

2007-12-02  Mathias Hasselmann  <mathias@openismus.com>

	Rebuild libraries before trying the phony docs target.

	* Makefile.am: List $(lib_LTLIBRARIES) as dependency for "docs".

2007-12-02  Mathias Hasselmann  <mathias@openismus.com>

	Allow custom service path for publishing contents and change the
	service monitor to use extensible EpcServiceInfo objects.

	* libepc/consumer.c, libepc/consumer.h: Change epc_consumer_new to use
	a single EpcServiceInfo. Update signal handlers. Add "path" property.
	Call epc_consumer_resolve_publisher before constructing URIs.
	* libepc/dispatcher.h: Remove EpcAddressFamily.